Remove navigation to other pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
-main:
-  - title: "Code"
-    url: /code/
-  - title: "Demo reel"
-    url: /code/
+# main:
+#   - title: "Code"
+#     url: /code/
+#   - title: "Demo reel"
+#     url: /code/
