--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,10 @@
 
 title: Portfolio
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Unity game developer/programmer portfolio.
 baseurl: "" # the subpath of your site, e.g. /blog
 domain: redmorr.github.io
 url: "https://redmorr.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
-#github_username:  jekyll
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
@@ -46,14 +42,6 @@ include: ["_pages"]
 
 atom_feed:
   hide: true
-
-defaults:
-  - scope:
-      path: ""
-      type: posts
-    values:
-      author_profile: true
-
 
 # Site Author
 author:
