--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Portfolio
+title: Unity C# Programmer
 description: >- # this means to ignore newlines until "baseurl:"
   Unity game developer/programmer portfolio.
 baseurl: "" # the subpath of your site, e.g. /blog
